crates/tsuno-driver/tests/snapshots/verify_cli__abstracts_mutable_reference_calls.snap
---
source: crates/tsuno-driver/tests/verify_cli.rs
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL bad_after_call
  tsuno assertion failed
  bb2
  model: [("model", "arg_1_0 -> 0\ncall_ret_2 -> 0\ncall_mut_1 -> (- 1)\n")]

stderr:
