crates/tsuno-driver/tests/snapshots/verify_cli__allows_reestablishing_mutable_reference_after_abstract_call.snap
---
source: crates/tsuno-driver/tests/verify_cli.rs
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS close_ok
  all assertions discharged

stderr:
