crates/tsuno-driver/tests/snapshots/verify_cli__reports_failing_assertion.snap
---
source: crates/tsuno-driver/tests/verify_cli.rs
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL bad
  tsuno assertion failed
  bb1
  model: [("model", "arg_1_0 -> 369098740\n")]

stderr:
